# transparency-engine

./: .gitignore  .vsts-ci.yml  .yarnrc.yml  Backend.dockerfile  CODEOWNERS  README.md  docker-compose.yml  package.json  rome.json  turbo.json
python/api-backend/: Dockerfile  pyproject.toml
python/api-backend/api_backend/: api_main.py
python/api-backend/api_backend/entities/api/: get_graph.py  get_graph_from_db.py  router.py
python/api-backend/api_backend/entities/constants/: schema.json
python/api-backend/api_backend/entities/util/: style_graph.py
python/api-backend/api_backend/model/: graph_model.py  report_model.py
python/api-backend/api_backend/report/api/: get_report.py  get_report_from_db.py  get_report_score.py  get_report_score_from_db.py  get_report_url.py  get_report_url_from_db.py  router.py
python/api-backend/api_backend/report/builders/: activity_analysis.py  entity_overview.py  own_review_flag_analysis.py  related_entities.py  report.py  review_flag_summary.py
python/api-backend/api_backend/report/constants/: attributes.py  config.json  report_data_mapping.py  report_template.py
python/api-backend/api_backend/report/util/: parsers.py  util.py
python/api-backend/api_backend/search/api/: router.py
python/api-backend/api_backend/util/: db_engine.py  load_env.py
python/api-backend/scripts/: install_python_deps.sh  start.sh
python/transparency-engine/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
python/transparency-engine/.devcontainer/: devcontainer.json
python/transparency-engine/docs/: conf.py  index.rst  modules.rst  transparency_engine.io.rst  transparency_engine.modules.graph.link_inference.rst  transparency_engine.modules.graph.preprocessing.rst  transparency_engine.modules.graph.rst  transparency_engine.modules.graphs.rst  transparency_engine.modules.graphs.uase.rst  transparency_engine.modules.math.rst  transparency_engine.modules.rst  transparency_engine.modules.stats.rst  transparency_engine.modules.text.rst  transparency_engine.pipeline.config.rst  transparency_engine.pipeline.rst  transparency_engine.pipeline.step.data_load.rst  transparency_engine.pipeline.step.rst  transparency_engine.preprocessing.graph.rst  transparency_engine.preprocessing.rst  transparency_engine.preprocessing.text.rst  transparency_engine.rst  transparency_engine.spark.rst
python/transparency-engine/docs/contributing/: index.rst
python/transparency-engine/docs/getting_started/: index.rst  install.rst
python/transparency-engine/samples/config/: pipeline.json  steps.json
python/transparency-engine/scripts/: install_python_deps.sh
python/transparency-engine/transparency_engine/: base_transformer.py  containers.py  main.py  typing.py
python/transparency-engine/transparency_engine/analysis/link_filtering/: base_link_filter.py
python/transparency-engine/transparency_engine/analysis/link_filtering/graph/: dynamic_individual_link_filtering.py  macro_link_filtering.py
python/transparency-engine/transparency_engine/analysis/link_inference/: base_link_estimator.py  dynamic_link_estimator.py  macro_link_estimator.py  static_link_estimator.py
python/transparency-engine/transparency_engine/analysis/scoring/: __init__.py  entity_scoring.py  measures.py  network_scoring.py
python/transparency-engine/transparency_engine/io/: __init__.py  data_handler.py
python/transparency-engine/transparency_engine/modules/data_generator/: __init__.py  data_replacement.py  synthetic_data_generator.py
python/transparency-engine/transparency_engine/modules/data_shaper/: __init__.py  spark_transform.py
python/transparency-engine/transparency_engine/modules/graph/embed/: __init__.py  base_embed.py  (+2 more)
python/transparency-engine/transparency_engine/modules/math/: embedding_processing.py  matrix_operations.py
python/transparency-engine/transparency_engine/modules/similarity/: __init__.py  ann_search.py  similarity_score.py
python/transparency-engine/transparency_engine/modules/stats/: __init__.py  aggregation.py  anomaly_detection.py  arithmetic_operators.py
python/transparency-engine/transparency_engine/modules/text/: __init__.py  fuzzy_matching.py
python/transparency-engine/transparency_engine/pipeline/: __init__.py  schemas.py  transparency_pipeline.py
python/transparency-engine/transparency_engine/preprocessing/: __init__.py
python/transparency-engine/transparency_engine/preprocessing/flag/: __init__.py  flag_filtering.py
python/transparency-engine/transparency_engine/preprocessing/graph/: __init__.py  multipartite_graph.py  multiplex_graph.py
python/transparency-engine/transparency_engine/preprocessing/text/: __init__.py  lsh_fuzzy_matching.py
python/transparency-engine/transparency_engine/reporting/: __init__.py  entity_activities.py  entity_attributes.py  entity_flags.py  entity_relationship_network.py  entity_report.py  report_schemas.py
python/transparency-engine/transparency_engine/spark/: utils.py
python/transparency-engine/transparency_engine/synthetic_data/: __init__.py  public_procurement.py
(+97 files in other folders)
